2014-03-21  Martin Jambor  <mjambor@suse.cz>

	PR ipa/60419
	* ipa.c (symtab_remove_unreachable_nodes): Clear thunk flag of nodes
	in the border.

2014-03-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60577
	* tree-core.h (struct tree_base): Document nothrow_flag use
	in VAR_DECL_NONALIASED.
	* tree.h (VAR_DECL_NONALIASED): New.
	(may_be_aliased): Adjust.
	* coverage.c (build_var): Set VAR_DECL_NONALIASED.

2014-03-20  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (expand_expr_real_1): Remove outdated comment.

2014-03-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/60597
	* ira.c (adjust_cleared_regs): Call copy_rtx on
	*reg_equiv[REGNO (loc)].src_p before passing it to
	simplify_replace_fn_rtx.

	PR target/60568
	* config/i386/i386.c (x86_output_mi_thunk): Surround UNSPEC_GOT
	into CONST, put pic register as first operand of PLUS.  Use
	gen_const_mem for both 32-bit and 64-bit PIC got loads.

2014-03-20  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* config/aarch64/aarch64.c (MEMORY_MOVE_COST): Delete.

2014-03-20  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (sparc_do_work_around_errata): Implement work
	around for store forwarding issue in the FPU on the UT699.
	* config/sparc/sparc.md (in_branch_delay): Return false for single FP
	loads and operations if -mfix-ut699 is specified.
	(divtf3_hq): Tweak attribute.
	(sqrttf2_hq): Likewise.

2014-03-20  Eric Botcazou  <ebotcazou@adacore.com>

	* calls.c (store_one_arg): Remove incorrect const qualification on the
	type of the temporary.
	* cfgexpand.c (expand_return): Likewise.
	* expr.c (expand_constructor): Likewise.
	(expand_expr_real_1): Likewise.

2014-03-20  Zhenqiang Chen  <zhenqiang.chen@linaro.org>

	* config/arm/arm.c (arm_dwarf_register_span): Update the element number
	of parts.

2014-03-19  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/60039
	* config/sh/sh.md (udivsi3_i1): Clobber R1 register.
