@@ -1,5 +1,10 @@
 2014-03-21  Martin Jambor  <mjambor@suse.cz>
 
+	PR ipa/59176
+        * g++.dg/torture/pr59176.C: New test.
+
+2014-03-21  Martin Jambor  <mjambor@suse.cz>
+
 	PR ipa/60419
 	* g++.dg/ipa/pr60419.C: New test.
 
